# cow-ai-tools

./: .dockerignore  .gitignore  Dockerfile.backend  README.md  requirements-backend.txt  requirements.txt  vercel.json
api/: index.py
data/cow-docs/faiss/: index.pkl
docs/: COW_FLUXO_COMPLETO.md  COW_POC_PLAN.md  COW_PROPOSAL_NEXT_PHASE.md  PROJECTS.md  cow_golden_questions.md  cow_poc_evaluation.md  cow_quickstart_first_order.md  cow_test_backend.md  cow_test_questions.md  deploy-backend-railway.md  deploy-vercel.md
pkg/cow-app/: .env.example  .envrc.example  pyproject.toml
pkg/cow-app/cow_app/: api.py
pkg/cow-brains/: README.md  pyproject.toml
pkg/cow-brains/cow_brains/: __init__.py  build_faiss.py  config.py  data_exporter.py  documents_cow.py  documents_cowsdk.py  documents_cowswap.py  openapi_orderbook.py  process_question.py
pkg/cow-core/: pyproject.toml
pkg/deployment/: .env.example  README.md  deploy-remotely.sh  docker-stack.yml  manage.sh
pkg/op-app/: .env.example  .envrc.example  .envrc.example.cow  .envrc.example.optimism  Dockerfile  pyproject.toml
pkg/op-app/.cursor/: settings.json
pkg/op-app/op_app/: api.py
pkg/op-brains/: pyproject.toml
pkg/op-brains/op_brains/: README.md  config.py  setup.py
pkg/op-brains/op_brains/chat/: apis.py  gemini_adapter.py  model_utils.py  system_structure.py  test_gemini_adapter.py  utils.py
pkg/op-brains/op_brains/documents/: __init__.py  optimism.py
pkg/op-brains/op_brains/optimism/: README.md  __init__.py  documents.py
pkg/op-brains/op_brains/retriever/: connect_faiss.py
pkg/op-brains/op_brains/summarizer/: utils.py
pkg/op-core/op_core/: config.py
pkg/op-data/: pyproject.toml
pkg/op-data/op_data/sources/: agora.py  snapshot.py  summary.py
pkg/rag-brains/: README.md  pyproject.toml
pkg/rag-brains/rag_brains/: __init__.py  config.py  exceptions.py
pkg/rag-brains/rag_brains/chat/: __init__.py  apis.py  gemini_adapter.py  model_utils.py  system_structure.py  utils.py
pkg/rag-brains/rag_brains/retriever/: connect_faiss.py
scripts/: run-backend.sh  test_approval_question.py  test_cow_answers_local.py  test_cow_api.sh  test_cow_poc.sh  test_gemini_latency.py  test_sdk_order_question.py
scripts/cow-1-create-docs-dataset/: main.py  test_artifact_format.py
scripts/cow-2-fetch-openapi/: main.py
scripts/cow-3-create-cowswap-dataset/: main.py
scripts/cow-4-create-cowsdk-dataset/: main.py
www/: .envrc.example  package-lock.json  package.json  tailwind.config.ts
www/src/app/: globals.css  layout.tsx
www/src/app/forum/: page.tsx
www/src/components/: Header.tsx
www/src/components/chat/: chat-bottombar.tsx  chat-empty-state.tsx  chat-header.tsx  chat-sidebar.tsx  chat-suggestions.tsx
www/src/components/forum/: Feedback.tsx  Sidebar.tsx  topic-header.tsx
www/src/components/ui/: avatar.tsx  formatted-message.tsx
www/src/lib/: chat-utils.ts
www/src/mocks/: handlers.ts
www/src/states/: use-chat-state.ts
(+6 files in other folders)
